# DFQ

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  _512_train.txt  cls_result.txt  convert_ncnn.py  dfq.py  eval_cls.sh  eval_seg.sh  eval_ssd.sh  improve_dfq.py  inference_cls.cpp  main.py  main_cls.py  main_seg.py  main_ssd.py  requirements.txt  seg_result.txt  ssd_result.txt
ZeroQ/: distill_data.py
ZeroQ/utils/: __init__.py  data_utils.py
dataset/: pascal.py
dataset/classification/: imagenet_dataset.py
dataset/detection/: voc_dataset.py
dataset/segmentation/: pascal.py
eval_results/: det_test_aeroplane.txt  det_test_bicycle.txt  det_test_bird.txt  det_test_boat.txt  det_test_bottle.txt  det_test_bus.txt  det_test_car.txt  det_test_cat.txt  det_test_chair.txt  det_test_cow.txt  det_test_diningtable.txt  det_test_dog.txt  det_test_horse.txt  det_test_motorbike.txt  det_test_person.txt  det_test_pottedplant.txt  det_test_sheep.txt  det_test_sofa.txt  det_test_train.txt  det_test_tvmonitor.txt
modeling/: deeplab.py
modeling/backbone/: mobilenet.py
modeling/classification/: MobileNetV2.py
modeling/detection/: data_preprocessing.py  fpn_mobilenetv1_ssd.py  fpn_ssd.py  mobilenet_v2_ssd_lite.py  mobilenetv1_ssd.py  mobilenetv1_ssd_lite.py  predictor.py  squeezenet_ssd_lite.py  ssd.py  vgg_ssd.py
modeling/ncnn/: model_cor.param  model_cor.table  model_cor_clip.table  model_equal.table  model_equal_cor.table  model_int8.param  model_int8.table  model_relu.table
utils/: __init__.py  layer_transform.py  quantize.py  relation.py  utils.py
(+14 files in other folders)
